--- a/client/public/index.css
+++ b/client/public/index.css
@@ -38,6 +38,11 @@ h3 {
   background-color: #ddd;
 }
 
+img {
+  width: 100%;
+  height: 250px;
+}
+
 .card-content {
   margin: 10px;
   color: #333;
