--- a/client/public/main.css
+++ b/client/public/main.css
@@ -7,7 +7,6 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   color: #333;
-  line-height: 1.6;
 }
 
 h2 {
@@ -23,6 +22,7 @@ h3 {
 
 .light {
   color: #777070;
+  margin-bottom: .5rem;
 }
 
 /* Card Styling */
@@ -30,6 +30,17 @@ h3 {
   border: 1px solid #777070;
   background-color: white;
   width: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card-content {
+  margin: 10px;
+  color: #333;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .image-placeholder {
@@ -44,12 +55,7 @@ img {
   object-fit: cover;
 }
 
-.card-content {
-  margin: 10px;
-  color: #333;
-}
-
-.card-content p {
+.card-content div {
   font-size: 13px;
 }
 
@@ -63,4 +69,11 @@ img {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+i {
+  position: absolute;
+  right: 0;
+  margin: 10px;
+  color: white;
 }
