Added table to modal and populated with data from the two products being compared

--- a/client/public/main.css
+++ b/client/public/main.css
@@ -81,3 +81,12 @@ i {
 i:hover {
   cursor: pointer;
 }
+
+.modal-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.modal-column {
+  margin: 10px;
+}
