--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -73,7 +73,7 @@ img {
 }
 
 /* Modal Styling */
-i {
+.btn {
   position: absolute;
   right: 0;
   margin: 10px;
@@ -128,4 +128,27 @@ th {
 td {
   letter-spacing: 1px;
   padding: 20px;
+}
+
+/* AddToOutfit Styling */
+
+.plus {
+  font-size: 50px;
+  margin: 20px auto;
+}
+
+.add-to-outfit {
+  font-size: 40px;
+  margin: 20px auto;
+  text-align: center;
+}
+
+.outfit {
+  justify-content: center;
+}
+
+/* Outfit Styling */
+.outfit-container {
+  display: flex;
+  flex-direction: row;
 }
