--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -135,20 +135,16 @@ td {
 .plus {
   font-size: 50px;
   margin: 20px auto;
+  color: green;
 }
 
 .add-to-outfit {
-  font-size: 40px;
+  font-size: 30px;
   margin: 20px auto;
   text-align: center;
+  line-height: 1.6;
 }
 
 .outfit {
   justify-content: center;
-}
-
-/* Outfit Styling */
-.outfit-container {
-  display: flex;
-  flex-direction: row;
 }
