--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -47,6 +47,17 @@ h3 {
   width: 100%;
   height: 250px;
   background-color: #ddd;
+  font-size: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.image-placeholder i {
+  font-size: 50px;
+  margin: 20px;
 }
 
 img {
