Add React Router Link tags so users can click on different products

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -172,3 +172,13 @@ td {
 .outfit {
   justify-content: center;
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  text-decoration: none;
+  color: inherit;
+}
